--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,4 +9,5 @@
     android:minHeight="?attr/actionBarSize"
     android:background="@color/colorAccent"
     app:navigationIcon="?attr/homeAsUpIndicator"
+    android:theme="@style/toolbarArrow"
     />
