--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,4 +62,8 @@
         <item name="android:layout_marginLeft">20dp</item>
         <item name="android:layout_marginRight">20dp</item>
     </style>
+
+    <style name="toolbarArrow">
+        <item name="colorControlNormal">@color/white</item>
+    </style>
 </resources>
