Revert "fix(core): fix default value"
This reverts commit b341f42f428b559cf6afb060d66e1e9f87462d30.

--- a/app/src/main/res/xml/global_parameters.xml
+++ b/app/src/main/res/xml/global_parameters.xml
@@ -9,7 +9,7 @@
        android:title="@string/GlobalCat" />
 
    <CheckBoxPreference
-       android:defaultValue="false"
+       android:defaultValue="true"
        android:key="boot"
        android:summary="CheckBox summary"
        android:summaryOff="@string/GlobalBootSummaryOff"
