--- a/app/src/main/res/layout/activity_detail_server.xml
+++ b/app/src/main/res/layout/activity_detail_server.xml
@@ -81,6 +81,11 @@
             android:layout_height="wrap_content"
             android:hint="@string/password"
             android:inputType="textPassword" />
+
+        <Spinner
+            android:id="@+id/spinnerAssetItemtype"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
