Modified the xml files

--- a/app/src/main/res/layout/activity_detail_server.xml
+++ b/app/src/main/res/layout/activity_detail_server.xml
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/colorYellow"
-        android:textColor="@color/textColorYellow"
+        android:textColor="@color/black"
         android:text="" />
 
 </RelativeLayout>
