--- a/app/src/main/res/layout/activity_list_servers.xml
+++ b/app/src/main/res/layout/activity_list_servers.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     xmlns:fbutton="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
